# tokenfold

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  engineering.md  interfaces.md  plan.md  roadmap.md  rust-toolchain.toml  touchpoints.md
.github/workflows/: ci.yml  publish-packages.yml  release.yml
crates/tokenfold-adapters/: Cargo.toml
crates/tokenfold-adapters/src/: lib.rs
crates/tokenfold-admin/: Cargo.toml
crates/tokenfold-admin/src/: lib.rs  manifest.rs  update.rs
crates/tokenfold-cli/: Cargo.toml
crates/tokenfold-cli/src/: args.rs  config.rs  diff.rs  format.rs  main.rs  mcp.rs  render.rs  rtk.rs  stats_cmd.rs
crates/tokenfold-cli/tests/: cli.rs  mcp.rs  rtk.rs
crates/tokenfold-core/: Cargo.toml
crates/tokenfold-core/benches/: THRESHOLDS.toml  compression_bench.rs
crates/tokenfold-core/examples/: quickstart.rs
crates/tokenfold-core/src/: budget.rs  errors.rs  filters.rs  input.rs  lib.rs  modes.rs  pipeline.rs  report.rs  retrieval_store.rs  safety.rs  stats.rs  status.rs  token_estimator.rs
crates/tokenfold-core/src/transforms/: diff.rs  json.rs  json_dict.rs  json_fold.rs  logs.rs  mod.rs  redaction.rs  schema.rs
crates/tokenfold-core/tests/: golden.rs  integration.rs  property_tests.rs
crates/tokenfold-image/: Cargo.toml
crates/tokenfold-image/src/: jpeg.rs  lib.rs  lossy.rs  png.rs
crates/tokenfold-learn/: Cargo.toml
crates/tokenfold-learn/src/: lib.rs
crates/tokenfold-output/: Cargo.toml
crates/tokenfold-output/src/: lib.rs
crates/tokenfold-proxy/: Cargo.toml
crates/tokenfold-proxy/src/: main.rs  server.rs
crates/tokenfold-proxy/tests/: proxy.rs
crates/tokenfold-py/: Cargo.toml  pyproject.toml
crates/tokenfold-py/src/: lib.rs
crates/tokenfold-rag/: Cargo.toml
crates/tokenfold-rag/src/: bm25.rs  lib.rs
eval/: pyproject.toml  run_baselines.py  run_fidelity.py
eval/tasks/: FIXTURES.md
eval/tasks/full_lossy/: flp_001.json  flp_002.json  flp_003.json  flp_004.json  flp_005.json  flp_006.json  flp_007.json  flp_008.json  flp_009.json  flp_010.json  flp_011.json  flp_012.json  flp_013.json  flp_014.json  flp_015.json  flp_016.json
eval/tasks/smoke/: task_001.json  task_002.json  task_003.json  task_004.json  task_005.json  task_006.json  task_007.json  task_008.json  task_009.json  task_010.json
eval/tasks/v04/: README.md  ccr_marker_001.json  code_build_error_001.json  code_patch_001.json  diff_review_001.json  json_schema_001.json  log_multi_service_001.json  log_qa_001.json  long_context_needle_001.json  rust_holdout_001.json  tool_call_json_001.json  typescript_holdout_001.json
examples/: api_response.json  openai_payload.json  quickstart.py
python-tests/: test_binding.py
scripts/: stage-npm-platform-packages.mjs  stage-npm-platform-packages.test.mjs
tests/fixtures/: FIXTURES.md  mode_matrix.toml
tests/golden/: MANIFEST.toml
tests/golden/diff_compaction/: small_diff.in.txt  small_diff.out.txt
tests/golden/json_minify/: nested_array.in.json  nested_array.out.json  simple_object.in.json  simple_object.out.json  string_escapes.in.json  string_escapes.out.json
tests/golden/log_compaction/: adjacent_duplicates.in.txt  adjacent_duplicates.out.txt  no_duplicates.out.txt
tests/golden/schema_compaction/: openai_tool_schema.in.json  openai_tool_schema.out.json
