[package]
name = "tokenfold-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tokenfold"
path = "src/main.rs"

[dependencies]
tokenfold-core = { path = "../tokenfold-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
