[package]
name = "tokenfold-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable CLI for token-aware compression of LLM payloads."

[[bin]]
name = "tokenfold"
path = "src/main.rs"

[dependencies]
tokenfold-core = { version = "0.3.2", path = "../tokenfold-core" }
tokenfold-output = { version = "0.3.2", path = "../tokenfold-output" }
tokenfold-learn = { version = "0.3.2", path = "../tokenfold-learn" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
