[package]
name = "tokenfold-learn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy-learning proposals for tokenfold compression reports."

[dependencies]
tokenfold-core = { version = "0.3.2", path = "../tokenfold-core" }
