[package]
name = "tokenfold-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Output-token savings reports for tokenfold."

[dependencies]
tokenfold-core = { version = "0.3.2", path = "../tokenfold-core" }
